fix post bloc couleur

--- a/src/MH/MailBundle/Resources/views/Template/bloc.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/bloc.html.twig
@@ -1,6 +1,6 @@
                     <!-- Debut bloc couleur -->
 
-                    <tr bgcolor="#{{ post.bloc.couleur | first }}">
+                    <tr bgcolor="#{{ post.bloc.couleur }}">
                         <td height="{{ post.bloc.hauteur }}">&nbsp;</td>
                     </tr>
 
