add red button bloc + markdown handling for red bloc

--- a/src/MH/MailBundle/Resources/views/Post/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Post/edit.html.twig
@@ -11,7 +11,7 @@
         <div class="well">
             {{ form(form) }}
         </div>
-        <a class="btn btn-default" href="{{ path('mh_mail_edit', {'id':mail_id} ) }}">Retour</a>
+        <a class="btn btn-link" href="{{ path('mh_mail_edit', {'id':mail_id} ) }}"><span class="glyphicon glyphicon-backward"></span> Retour</a>
     </div>
 
 
