--- a/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
@@ -20,7 +20,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#post{{ post.id }}">
-                                {{ post.slug }}</a>
+                                {{ post.name }} </a><div style="float: right;" >{{ post.name }}</div>
                         </h4>
                     </div>
                     <div id="post{{ post.id }}" class="panel-collapse collapse">
