XHR Request for Red Action button

--- a/src/MH/MailBundle/Resources/views/PostType/select.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/select.html.twig
@@ -44,6 +44,8 @@
 {% endblock %}
 
 {% block bundle_javascript %}
+    <script src="{{ asset('bundles/mhmail/js/main.js') }}"></script>
+
     <script type="text/javascript">
         $(document).ready(function () {
             $(".type-sortable").sortable({
