--- a/src/MH/MailBundle/Resources/views/PostType/button_red.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/button_red.html.twig
@@ -18,37 +18,116 @@
 
             <hr>
 
-            {{ form(form) }}
+            {#{{ form(form) }}#}
             <button id="show" class="btn btn-success">Previsualiser</button>
-            {{ include("MHMailBundle:Template:modal_show.html.twig") }}
+    {#{{ include("MHMailBundle:Template:modal_show.html.twig") }}#}
         </div>
     </div>
     <br>
     <a class="btn btn-link"
         href="{{ path('mh_mail_edit', {'id': id}) }}"><span class="glyphicon glyphicon-backward"></span> Retour</a>
+    <a class="btn btn-danger"
+       href="{{ path('mh_mail_button_red_edit_x', {'id': post.id}) }}" data-toggle="modal"
+       data-target="#post-form-modal" data-remote="false"><span class="glyphicon glyphicon-danger"></span> Modif X</a>
 
+    <div id="post-form-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
 
 {% block bundle_javascript %}
 
     {{ parent() }}
-<script>
-    $(document).ready(function() {
-        $("#modalP").modal();
-        $("#show").click(function(){
-            $("#modalP").modal();
+    <script>
+        $(document).ready(function() {
+            /*$("#modalP").modal();
+             $("#show").click(function(){
+             $("#modalP").modal();
+             });
+             var tab = [];
+             var i;
+             $("form textarea").each(function(){
+             tab.push(new SimpleMDE({
+             spellChecker: false,
+             forceSync: true,
+             element: this
+             }));
+             });*/
+
+            var $postFormModal = $('#post-form-modal');
+
+            $postFormModal.on('show.bs.modal', function (e) {
+
+                var $btn = $(e.relatedTarget);
+
+                var $modalContent = $postFormModal.find('.modal-content');
+
+                $modalContent.load($btn.attr("href"), function () {
+
+                    $postFormModal.find('form').submit(function (e) {
+
+                        var $form = $(this);
+
+                        $.ajax({
+                            type: "POST",
+                            url: $form.attr('action'),
+                            data: $form.serialize(),
+                            success: function (data) {
+                                console.log(data);
+
+                                //var $panel = $($btn.parents('.panel-body')[0]);
+
+                                /*switch ($form.attr('name')) {
+                                 case 'edit_post':
+                                 $panel.find('.post-title').html($form.find('#edit_post_title').val());
+                                 break;
+                                 case 'delete_post':
+                                 $panel.parent().fadeOut(400, function () {
+                                 $(this).remove();
+                                 });
+                                 break;
+                                 case 'new_post':
+                                 var $newPost = $($panel.find('ul').find('li')[0]).clone();
+                                 $newPost.find('.post-title').html($form.find('#new_post_title').val());
+                                 $newPost.hide().appendTo($panel.find('ul')).fadeIn();
+                                 break;
+                                 case 'edit_newsletter-header':
+                                 $panel.find('#newsletter-title').html($form.find('#edit_newsletter-header_title').val());
+                                 $panel.find('#newsletter-week').html($form.find('#edit_newsletter-header_week').val());
+                                 break;
+                                 case 'delete_newsletter':
+                                 $($btn.parents('tr')[0]).fadeOut(400, function () {
+                                 $(this).remove();
+                                 });
+                                 break;
+                                 }*/
+
+                                $postFormModal.modal('hide');
+                            }
+                        });
+
+                        e.preventDefault();
+                    })
+                });
+            }).on('shown.bs.modal', function () {
+                var tab = [];
+                console.log("New Thing");
+                $("form textarea").each(function(){
+                    tab.push(new SimpleMDE({
+                        spellChecker: false,
+                        forceSync: true,
+                        element: this
+                    }));
+                    console.log("New Thing");
+                });
+            });
+
         });
-        var tab = [];
-        var i;
-        $("form textarea").each(function(){
-            tab.push(new SimpleMDE({
-                spellChecker: false,
-                forceSync: true,
-                element: this
-            }));
-        });
-    });
-</script>
+    </script>
+{#<script src="{{ asset('bundles/mhmail/js/main.js') }}"></script>#}
 {% endblock %}
 
