Add XHR for Select and then Button Red Working In XHR Add

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,6 +24,9 @@
             .scroll {
                 position:relative;
             }
+            .modal {
+                overflow-y: scroll;
+            }
         </style>
     {% endblock %}
 </head>
