--- a/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
@@ -42,7 +42,8 @@
             <br>
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-12">
-                    <a class="btn btn-primary" href="{{ path('mh_mail_post_select', {'id': mail.id}  ) }}" >Ajouter un post</a>
+                    <a class="btn btn-primary" href="{{ path('mh_mail_post_select', {'id': mail.id}  ) }}" data-toggle="modal"
+                       data-target="#post-select-modal" data-remote="false"  >Ajouter un post</a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <a href="{{ path('mh_mail_view',{'id':mail.id}) }}" class="btn btn-info" target="_blank">
@@ -67,6 +68,20 @@
 
         </div>
 
+    <div id="post-form-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content" id="post-content">
+            </div>
+        </div>
+    </div>
+
+    <div id="post-select-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content" id="select-content">
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
 
@@ -89,6 +104,100 @@
                 });
             }
         });
+            /*$("#modalP").modal();
+             $("#show").click(function(){
+             $("#modalP").modal();
+             });
+             var tab = [];
+             var i;
+             $("form textarea").each(function(){
+             tab.push(new SimpleMDE({
+             spellChecker: false,
+             forceSync: true,
+             element: this
+             }));
+             });*/
+
+        var $postSelectModal = $('#post-select-modal');
+
+        $postSelectModal.on('show.bs.modal', function (e) {
+
+            var $btn = $(e.relatedTarget);
+
+            var $modalSelectContent = $postSelectModal.find('#select-content');
+
+            $modalSelectContent.load($btn.attr("href"), function () {
+
+            });
+        });
+        
+
+            var $postFormModal = $('#post-form-modal');
+
+            $postFormModal.on('show.bs.modal', function (e) {
+                console.log("Open the new One");
+                $postSelectModal.modal('hide');
+
+                var $btn = $(e.relatedTarget);
+
+                var $modalContent = $postFormModal.find('#post-content');
+
+                $modalContent.load($btn.attr("href"), function () {
+
+                    $postFormModal.find('form').submit(function (e) {
+
+                        var $form = $(this);
+
+                        $.ajax({
+                            type: "POST",
+                            url: $form.attr('action'),
+                            data: $form.serialize(),
+                            success: function (data) {
+                                console.log(data);
+
+                                //var $panel = $($btn.parents('.panel-body')[0]);
+
+                                /*switch ($form.attr('name')) {
+                                 case 'edit_post':
+                                 $panel.find('.post-title').html($form.find('#edit_post_title').val());
+                                 break;
+                                 case 'delete_post':
+                                 $panel.parent().fadeOut(400, function () {
+                                 $(this).remove();
+                                 });
+                                 break;
+                                 case 'new_post':
+                                 var $newPost = $($panel.find('ul').find('li')[0]).clone();
+                                 $newPost.find('.post-title').html($form.find('#new_post_title').val());
+                                 $newPost.hide().appendTo($panel.find('ul')).fadeIn();
+                                 break;
+                                 case 'edit_newsletter-header':
+                                 $panel.find('#newsletter-title').html($form.find('#edit_newsletter-header_title').val());
+                                 $panel.find('#newsletter-week').html($form.find('#edit_newsletter-header_week').val());
+                                 break;
+                                 case 'delete_newsletter':
+                                 $($btn.parents('tr')[0]).fadeOut(400, function () {
+                                 $(this).remove();
+                                 });
+                                 break;
+                                 }*/
+
+                                $postFormModal.modal('hide');
+                            }
+                        });
+
+                        e.preventDefault();
+                    })
+                });
+            }).on('shown.bs.modal', function () {
+                if ($(this).find('textarea').size() > 0) {
+                    var simplemde = new SimpleMDE({
+                        spellChecker: false,
+                        forceSync: true
+                    });
+                }
+            });
+
 
     });
 </script>
