--- a/src/MH/MailBundle/Resources/views/Template/button_red.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/button_red.html.twig
@@ -8,7 +8,7 @@
                                             <tbody>
                                             <tr>
                                                 <td class="mcnButtonContent"
-                                                    style=" font-family: Arial; font-size: {{ post.buttonred.lien.texte.police }}px; padding: {{ post.buttonred.hauteur }}px;" align="center" valign="middle"><a class="mcnButton " title="{{ post.buttonred.lien.texte }}" href="{{ post.buttonred.lien.href }}" alt="{{ post.buttonred.lien.alt }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color:#{{ post.buttonred.lien.texte.couleur }};">{{ post.buttonred.lien.texte|markdown|raw }}<br />
+                                                    style=" font-family: Arial; font-size: {{ post.buttonred.lien.texte.police }}px; padding: {{ post.buttonred.hauteur }}px;" align="center" valign="middle"><a class="mcnButton " title="{{ post.buttonred.lien.texte|markdown|raw }}" href="{{ post.buttonred.lien.href }}" alt="{{ post.buttonred.lien.alt }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color:#{{ post.buttonred.lien.texte.couleur }};">{{ post.buttonred.lien.texte|markdown|raw }}<br />
                                                     </a></td>
                                             </tr>
                                             </tbody>
