--- a/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
@@ -1,21 +1,31 @@
-{% extends "MHNewsletterBundle::layout.html.twig" %}
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+    <h4 class="modal-title">Suppression du Post</h4>
+</div>
 
-{% block title %}
-    Suppression - {{ parent() }}
-{% endblock %}
-
-{% block bundle_body %}
-    <h2>Supprimer un Post</h2>
-    <hr>
-    <p>La suppresion du post est irreversible<br>
-    Souhaitez-vous poursuivre ?</p>
-
+<div class="modal-body">
     <div class="well">
+        {{ post.titre }}<br>
+        {{ post.content }}<br>
+        {% if post.lien is not empty %}
+            <a
+                    href="{{ post.lien }}"
+                    target="_blank"
+                    style="display: inline-block;text-decoration: none;font-family: Helvetica, Arial, sans-serif;color: #2c87c3;"><span
+                        style="color: #2c87c3;text-decoration: none;">> {{ post.textelien }}</span></a>
+        {% endif %}
+        <hr>
+        <p>La suppresion du post est irreversible<br>
+        Souhaitez-vous poursuivre ?</p>
+
         <form action="{{ path('mh_newsletter_post_delete', {'id':post.id, 'newsletter_id':newsletter_id, 'rubrique_id':rubrique_id}) }}" method="post">
             <input type="submit" value="Supprimer" class="btn btn-danger"/>
             {{ form_rest(form) }}
         </form>
     </div>
-    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': newsletter_id}) }}">Retour</a>
-    <hr>
-{% endblock %}
+</div>
+
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+    </div>
