--- a/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
@@ -19,7 +19,7 @@
         <p>La suppresion du post est irreversible<br>
         Souhaitez-vous poursuivre ?</p>
 
-        <form action="{{ path('mh_newsletter_post_delete', {'id':post.id, 'newsletter_id':newsletter_id, 'rubrique_id':rubrique_id}) }}" method="post">
+        <form name="mh_newsletterbundle_post_delete" action="{{ path('mh_newsletter_post_delete', {'id':post.id, 'newsletter_id':newsletter_id, 'rubrique_id':rubrique_id}) }}" method="post">
             <input type="submit" value="Supprimer" class="btn btn-danger"/>
             {{ form_rest(form) }}
         </form>
