--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -69,7 +69,8 @@
 
                             <div class="row">
                                 <div class="col-lg-9 col-md-6 col-xs-6">
-                                    <a class="btn btn-primary" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">new Post</a>
+                                    <a class="btn btn-primary" data-toggle="modal"
+                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">new Post</a>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-xs-6">
                                     <a class="btn btn-warning" href="{{ path('mh_newsletter_rubrique_edit',  {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
@@ -205,9 +206,16 @@
                                         $panel.find('.content-update').html($form.find('#mh_newsletterbundle_post_edit_content').val());
                                         break;
                                     case 'mh_newsletterbundle_post_delete':
-                                        $panel.parent().fadeOut(400, function () {
+                                        $panel.parent().fadeOut(1500, function () {
                                             $(this).remove();
                                         });
+                                        break;
+                                    case 'mh_newsletterbundle_post_add':
+                                        $panel = $($btn.parents('.panel-success')[0]);
+                                        var $newPost = $($panel.find('ul').find('li')[0]).clone();
+                                        $newPost.find('.link-title').html($form.find('#mh_newsletterbundle_post_add_titre').val());
+                                        $newPost.find('.content-update').html($form.find('#mh_newsletterbundle_post_add_content').val());
+                                        $newPost.hide().appendTo($panel.find('ul')).fadeIn(1500);
                                         break;
                                 }
                                 console.log(data);
